# SDL_projects

./: README.md
Clion-sdl-cmake/: README.md  clion_sdl2.cmake
SDL_sort-quicksort/: CMakeLists.txt  README.md  makefile  quicksort
SDL_sort-quicksort/include/: BubbleSort.h
SDL_sort-quicksort/src/: BubbleSort.cpp  QuickSort.cpp  QuickSort.h  Rectangle.cpp  Rectangle.h  Screen.cpp  Screen.h  main.cpp
sdl_bubble_sort/: CMakeLists.txt  README.md
sdl_bubble_sort/include/: Rectangle.h
sdl_bubble_sort/src/: BubbleSort.cpp  Rectangle.cpp  Screen.cpp  main.cpp
